--- a/index.html
+++ b/index.html
@@ -43,7 +43,28 @@
 
 			<div class="sub-container publication">
 				<h1>SELECTED PUBLICATIONS</h1>
+				<div class="publication-container sub-text-container">
+					<div class="thumbnail-counter">
+						<img class="thumbnail" src="images/paper/thumbnail_360roam2022.png">
+					</div>
+					<div class="paper-info-counter">
+						<p><b>360Roam: Real-Time Indoor Roaming Using Geometry-Aware 360ᵒ Radiance Fields</b> </p>
+						<p>Huajian Huang, <i><b>Yingshu Chen</b></i>, Tianjian Zhang, Sai-Kit Yeung
+							<!--							<br> SIGGRAPH Asia 2022 Technical Communications (to appear).-->
+						</p>
+						<span>
+<!--							<a href="#" target="_blank">[Paper]</a>-->
+							<a href="https://huajianup.github.io/research/360Roam/" target="_blank">[Project]</a>
+							<a href="https://arxiv.org/abs/2208.02705" target="_blank">[Arxiv]</a>
+							<!--							<a href="#" target="_blank">[Data]</a>-->
+						</span>
+						<p class="abstract"><small><i>360Roam</i> is a novel scene-level NeRF system that can synthesize novel views of large-scale indoor scenes and support real-time indoor roaming.</small></p>
+					</div>
+
+				</div>
+
 				<div class="publication-container">
+
 					<div class="thumbnail-counter">
 						<img class="thumbnail" src="images/paper/thumbnail_eccv2022.png">
 					</div>
@@ -83,25 +104,8 @@
 					</div>
 				</div>
 
-				<h1>PREPRINTS</h1>
-				<div class="publication-container sub-text-container">
-					<div class="thumbnail-counter">
-						<img class="thumbnail" src="images/paper/thumbnail_360roam2022.png">
-					</div>
-					<div class="paper-info-counter">
-						<p><b>360Roam: Real-Time Indoor Roaming Using Geometry-Aware 360ᵒ Radiance Fields</b> </p>
-						<p>Huajian Huang, <i><b>Yingshu Chen</b></i>, Tianjian Zhang, Sai-Kit Yeung
-<!--							<br> SIGGRAPH Asia 2022 Technical Communications (to appear).-->
-						</p>
-						<span>
-<!--							<a href="#" target="_blank">[Paper]</a>-->
-							<a href="https://huajianup.github.io/research/360Roam/" target="_blank">[Project]</a>
-							<a href="https://arxiv.org/abs/2208.02705" target="_blank">[Arxiv]</a>
-<!--							<a href="#" target="_blank">[Data]</a>-->
-						</span>
-						<p class="abstract"><small><i>360Roam</i> is a novel scene-level NeRF system that can synthesize novel views of large-scale indoor scenes and support real-time indoor roaming.</small></p>
-					</div>
-				</div>
+<!--				<h1>PREPRINTS</h1>-->
+
 			</div>
 
 
