--- a/cv_cys.html
+++ b/cv_cys.html
@@ -19,7 +19,8 @@
         <h1>BASIC INFORMATION</h1>
         <h3>NAME: Yingshu CHEN (Susan) 陳穎舒</h3>
         <h3>E-MAIL：yingshu2008[AT]gmail[DOT]com </h3>
-        <h3>PERSONAL WEBSITE：<a href="http://yschen.site">yschen.site</a></h3>
+        <h3>PERSONAL WEBSITE：<a href="http://yschen.site">yschen.site</a>
+            <br><a href="https://chenyingshu.github.io/">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;chenyingshu.github.io</a></h3>
         <!--        <h3>LINKEDIN：<a href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7">https://cn.linkedin.com/in/yingshu-chen-a0550aa7</a></h3>-->
         <!--        <h4 class="info-text">Yingshu CHEN is currently a PhD student in the Department of Computer Science and Engineering, the Hong Kong University of Science and Technology (HKUST).-->
         <!--            Her research interests cover computer vision and computer graphics for computational design such as 2D and 3D style transfer.</h4>-->
