--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta content="chenyingshu Yingshu Chen Susan HKUST" name="keywords">
 		<meta content="Susan's Personal Webpage" name="description">
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<meta name="google-site-verification" content="S5nCw19pRq7mIILllS376ov6_nr0qm_EJrEyhYHOdWM" />
 	</head>
 
 	<body>
