--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
 
 			<div class="info-counter">
 				<h1>Yingshu CHEN (Susan) <span lang="cn">陈颖舒</span></h1>
-				<p><b>E-MAIL</b>：yingshu2008[AT]gmail[DOT]com </p>
-				<p><b>LINKEDIN</b>：<a href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank">https://cn.linkedin.com/in/yingshu-chen-a0550aa7</a></p>
+<!--				<p><b>E-MAIL</b>：yingshu2008[AT]gmail[DOT]com </p>-->
+<!--				<p><b>LINKEDIN</b>：<a href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank">https://cn.linkedin.com/in/yingshu-chen-a0550aa7</a></p>-->
+				<p><a class="link-style none-decoration" href="mailto:yingshu2008@gmail.com"><b>E-MAIL</b></a>: yingshu2008[AT]gmail[DOT]com  | <b> <a class="none-decoration link-style" href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank">LINKEDIN</a> </b></p>
 				<h5 class="info-text">Yingshu CHEN is currently a PhD candidate in the Department of Computer Science and Engineering, the Hong Kong University of Science and Technology (HKUST) supervised by Sai-Kit Yeung and Ajay Joneja.
 					Her research interests cover computer vision and computer graphics for computational design such as 2D and 3D style transfer.
 					Yingshu received her B.Eng in Digital Media Technology from Zhejiang University in 2016 and M.Sc in Computer Science from The University of Hong Kong in 2018.</h5>
 			</div>
 		</header>
+		<hr class="fancy-hr">
 
-		&nbsp;&nbsp;&nbsp;&nbsp;<section class="container">
+		<section class="container">
 
 			<div class="sub-container">
 				<h1>EDUCATION AND WORKING EXPERIENCE</h1>
@@ -135,7 +137,7 @@
 		</section>
 
 		<footer>
-			<hr>
+			<hr class="fancy-hr">
 			CONTACT ME :) via YINGSHU2008[AT]GMAIL[DOT]COM
 		</footer>
 
