--- a/index.html
+++ b/index.html
@@ -48,12 +48,32 @@
 				<h1>SELECTED PUBLICATIONS</h1>
 				<div class="publication-container sub-text-container">
 					<div class="thumbnail-counter">
+						<img class="thumbnail" src="images/paper/thumbnail_360vot.gif">
+					</div>
+					<div class="paper-info-counter">
+						<p><b>360VOT: A New Benchmark Dataset for Omnidirectional Visual Object Tracking</b> </p>
+						<p>Huajian Huang, Yinzhe Xu, <i><b>Yingshu Chen</b></i>, Sai-Kit Yeung
+							<br> International Conference on Computer Vision (ICCV) 2023.
+						</p>
+						<span>
+<!--							<a href="#" target="_blank">[Paper]</a>-->
+							<!--							<a href="https://huajianup.github.io/research/360Roam/" target="_blank">[Project]</a>-->
+							<a href="https://arxiv.org/abs/2307.14630" target="_blank">[Arxiv]</a>
+							<a href="https://github.com/HuajianUP/360VOT/" target="_blank">[Toolkit]</a>
+						</span>
+						<p class="abstract"><small>360VOT aims at the novel task of omnidirectional object tracking with new video object tracking benchmark dataset and evaluation metrics.</small></p>
+					</div>
+
+				</div>
+
+				<div class="publication-container sub-text-container">
+					<div class="thumbnail-counter">
 						<img class="thumbnail" src="images/paper/thumbnail_360roam2022.png">
 					</div>
 					<div class="paper-info-counter">
 						<p><b>360Roam: Real-Time Indoor Roaming Using Geometry-Aware 360ᵒ Radiance Fields</b> </p>
 						<p>Huajian Huang, <i><b>Yingshu Chen</b></i>, Tianjian Zhang, Sai-Kit Yeung
-							<!--							<br> SIGGRAPH Asia 2022 Technical Communications (to appear).-->
+							<!--							<br> SIGGRAPH Asia 2022 Technical Communications.-->
 						</p>
 						<span>
 <!--							<a href="#" target="_blank">[Paper]</a>-->
