--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
 			<div class="info-counter">
 				<h1>Yingshu CHEN (Susan) <span lang="cn">陈颖舒</span></h1>
-<!--				<p><b>E-MAIL</b>：yingshu2008[AT]gmail[DOT]com </p>-->
-<!--				<p><b>LINKEDIN</b>：<a href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank">https://cn.linkedin.com/in/yingshu-chen-a0550aa7</a></p>-->
-				<p><a class="link-style none-decoration" href="mailto:yingshu2008@gmail.com"><b>E-MAIL</b></a>: yingshu2008[AT]gmail[DOT]com  | <b> <a class="none-decoration link-style" href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank">LINKEDIN</a> </b></p>
+				<p><a class="link-style none-decoration" href="mailto:yingshu2008@gmail.com"><b>E-MAIL</b></a>: yingshu2008[AT]gmail[DOT]com  | <a class="link-style none-decoration" href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank"><b>LINKEDIN</b></a> </p>
 				<h5 class="info-text">Yingshu CHEN is currently a PhD candidate in the Department of Computer Science and Engineering, the Hong Kong University of Science and Technology (HKUST) supervised by Sai-Kit Yeung and Ajay Joneja.
 					Her research interests cover computer vision and computer graphics for computational design such as 2D and 3D style transfer.
 					Yingshu received her B.Eng in Digital Media Technology from Zhejiang University in 2016 and M.Sc in Computer Science from The University of Hong Kong in 2018.</h5>
@@ -37,7 +35,6 @@
 					<p>August 2019 - Now, PhD student in Department of Computer Science and Engineering, HKUST</p>
 					<p>Summer 2019, Research Assistant of Division of Integrative Systems and Design, HKUST</p>
 					<p>2018 – 2019, Analytics Programmer,  Aigens Limited Technology (Hong Kong)</p>
-					<!-- <p>October 2017, Activity Helper and Cantonese-Putonghua Interpreter, Centre for Educational Leadership (CEL) Gansu Professional Training, Faculty of Education in HKU</p> -->
 					<p>2016 – 2018, Master of Science in Computer Science, The University of Hong Kong</p>
 					<p>2012 – 2016, Bachelor of Engineering in Digital Media Technology, Zhejiang University</p>
 				</div>
@@ -57,7 +54,7 @@
 						</p>
 						<span>
 <!--							<a href="#" target="_blank">[Paper]</a>-->
-							<!--							<a href="https://huajianup.github.io/research/360Roam/" target="_blank">[Project]</a>-->
+							<!--							<a href="https://360vot.hkustvgd.com/" target="_blank">[Project]</a>-->
 							<a href="https://arxiv.org/abs/2307.14630" target="_blank">[Arxiv]</a>
 							<a href="https://github.com/HuajianUP/360VOT/" target="_blank">[Toolkit]</a>
 						</span>
@@ -119,7 +116,7 @@
 							<a href="https://arxiv.org/abs/2209.05800" target="_blank">[Arxiv]</a>
 							<a href="https://github.com/hkust-vgd/architectural_style_transfer" target="_blank">[Code]</a>
 							<a href="https://github.com/hkust-vgd/architectural_style_transfer#dataset" target="_blank">[Data]</a>
-							<a href="https://ieeexplore.ieee.org/document/9887763/" target="_blank">[IEEE]</a>
+<!--							<a href="https://ieeexplore.ieee.org/document/9887763/" target="_blank">[IEEE]</a>-->
 						</span>
 
 						<p class="abstract"><small>Architectural Photography Style Transfer aims to transfer background dynamic texture and chrominance,
@@ -135,14 +132,14 @@
 			<div class="sub-container">
 				<h1>PROJECTS</h1>
 				<div class="sub-text-container">
-					<p><a href="./ad-transfer" target="_blank">3D Advertisement Poster</a> (WebGL): A web-based demo for 3D advertisment display. </p>
-					<p><a href="https://github.com/chenyingshu/ThinkTypeSystem" target="_blank">Human Computer Interaction via Brainwave Control</a> (C++ and Qt): <a href="https://vimeo.com/243664058" target="_blank">Demo Video</a></p>
+					<p><a href="./ad-transfer" target="_blank"><b>3D Advertisement Poster</b></a> (WebGL): A web-based demo for 3D advertisment display. </p>
+					<p><a href="https://github.com/chenyingshu/ThinkTypeSystem" target="_blank"><b>Human Computer Interaction via Brainwave Control</b></a> (C++ and Qt): <a href="https://vimeo.com/243664058" target="_blank">Demo Video</a></p>
 					&nbsp;&nbsp;&nbsp;&nbsp;<small>- Study the effect of user interface (UI) elements and human-induced factors on electroencephalography (EEG) signals,
 					proposing a brain-computer interface (BCI) typing system through EEG data retrieved from the wireless Emotiv neuroheadset.</small><br>
-					<p><a href="https://chenyingshu.github.io/MovieTrendFromDataVisualization/" target="_blank">Movie Trend Visualization</a>: responsible for data collection, overall design, top movie visualization and analysis, webpage design.</p>
-					<p><a href="https://vimeo.com/260713934" target="_blank">Design and Method Study of Two-handed Natural Interactive Scene Modeling Applied on Virtual Reality</a> (Unity with C#):</p>
+					<p><a href="https://chenyingshu.github.io/MovieTrendFromDataVisualization/" target="_blank"><b>Movie Trend Visualization</b></a>: responsible for data collection, overall design, top movie visualization and analysis, webpage design.</p>
+					<p><a href="https://vimeo.com/260713934" target="_blank"><b>Design and Method Study of Two-handed Natural Interactive Scene Modeling Applied on Virtual Reality</b></a> (Unity with C#):</p>
 					&nbsp;&nbsp;&nbsp;&nbsp;<small>- Free hand gesture control for simple modeling with Leap Motion.</small><br>
-					<p><a href="https://github.com/chenyingshu/Traveling-Website-SRTP" target="_blank">Original Design of Websites with Interaction Visualization</a>: UG Student Research Training Program (SRTP)</p>
+					<p><a href="https://github.com/chenyingshu/Traveling-Website-SRTP" target="_blank"><b>Original Design of Websites with Interaction Visualization</b></a>: UG Student Research Training Program (SRTP)</p>
 				</div>
 			</div>
 
