--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</p>
 						<span>
 <!--							<a href="#" target="_blank">[Paper]</a>-->
-							<!--							<a href="https://360vot.hkustvgd.com/" target="_blank">[Project]</a>-->
+							<a href="https://360vot.hkustvgd.com/" target="_blank">[Project]</a>
 							<a href="https://arxiv.org/abs/2307.14630" target="_blank">[Arxiv]</a>
 							<a href="https://github.com/HuajianUP/360VOT/" target="_blank">[Toolkit]</a>
 						</span>
@@ -83,7 +83,7 @@
 
 				</div>
 
-				<div class="publication-container">
+				<div class="publication-container sub-text-container">
 
 					<div class="thumbnail-counter">
 						<img class="thumbnail" src="images/paper/thumbnail_eccv2022.png">
@@ -93,6 +93,7 @@
 						<p>Hong Wing Pang, <i><b>Yingshu Chen</b></i>, Phuoc-Hieu T. Le, Binh-Son Hua, Thanh Nguyen, Sai-Kit Yeung
 							<br> European Conference on Computer Vision (ECCV) 2022. </p>
 						<span>
+							<a href="https://hieultp.github.io/publication/neural-scene-decoration/" target="_blank">[Project]</a>
 							<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136830137.pdf" target="_blank">[Paper]</a>
 							<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136830137-supp.pdf" target="_blank">[Supp]</a>
 							<a href="https://arxiv.org/abs/2108.01806" target="_blank">[Arxiv]</a>
@@ -113,7 +114,7 @@
 						<span>
 							<a href="https://chenyingshu.github.io/time_of_day/assets/ICCP_2022_paper_updated.pdf" target="_blank">[Paper]</a>
 							<a href="https://chenyingshu.github.io/time_of_day/" target="_blank">[Project]</a>
-							<a href="https://arxiv.org/abs/2209.05800" target="_blank">[Arxiv]</a>
+							<!-- <a href="https://arxiv.org/abs/2209.05800" target="_blank">[Arxiv]</a> -->
 							<a href="https://github.com/hkust-vgd/architectural_style_transfer" target="_blank">[Code]</a>
 							<a href="https://github.com/hkust-vgd/architectural_style_transfer#dataset" target="_blank">[Data]</a>
 <!--							<a href="https://ieeexplore.ieee.org/document/9887763/" target="_blank">[IEEE]</a>-->
