--- a/cv_cys.html
+++ b/cv_cys.html
@@ -40,7 +40,7 @@
 
     <div class="sub-container">
         <h1>EXPERIENCE</h1>
-        <p>April 2023 to now, research visiting student in University of South California,  ICT Vision and Graphics Lab (VGL)</p>
+        <p>April to August 2023, research visiting scholar in University of South California,  ICT Vision and Graphics Lab (VGL)</p>
         <p>August 2019 to now, PhD student in Department of Computer Science and Engineering, HKUST</p>
         <p>2021 to 2022, PhD student in Thrust of Computational Media and Arts, HKUST (GZ)</p>
         <p>July 2019 to August 2019, research assistant of Division of Integrative Systems and Design, HKUST</p>
