--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="sub-text-container">
 					<p>August 2019 - Now, PhD student in Department of Computer Science and Engineering, HKUST</p>
 					<p>Summer 2019, Research Assistant of Division of Integrative Systems and Design, HKUST</p>
-					<p>2018 – 2019, Analytics Programmer,  Aigens Limited Technology (Hong Kong)</p>
+					<p>2018 – 2019, Analytics Programmer,  Aigens Technology Limited (Hong Kong)</p>
 					<p>2016 – 2018, Master of Science in Computer Science, The University of Hong Kong</p>
 					<p>2012 – 2016, Bachelor of Engineering in Digital Media Technology, Zhejiang University</p>
 				</div>
