--- a/cv_cys.html
+++ b/cv_cys.html
@@ -54,29 +54,36 @@
     <div class="sub-container">
         <h1>PUBLICATION</h1>
         <strong>* equal contribution</strong>
-        <p> 10/2023  Huajian Huang, Yinzhe Xu, <b>Yingshu Chen</b> and Sai-Kit Yeung, 360VOT: A New Benchmark Dataset for Omnidirectional Visual Object Tracking, International Conference on Computer Vision (ICCV), 2023</p>
-        <p> 10/2023  Ziqiang Zheng, <b>Yingshu Chen</b>, Binh-Son Hua and Sai-Kit Yeung, CompUDA: Compositional Unsupervised Domain Adaptation for Semantic Segmentation under Adverse Conditions, IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2023</p>
-        <p> 10/2023  Ziqiang Zheng, <b>Yingshu Chen</b>, Binh-Son Hua, Yang Wu and Sai-Kit Yeung, Cross-Domain Autonomous Driving Perception using Contrastive Appearance Adaptation, IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2023</p>
-        <p> 06/2023  Tan-Sang Ha*, Ziqiang Zheng*, <b>Yingshu Chen</b>, Haixin Liang, Apple Pui-Yi Chui, Yue-Him Wong and Sai-Kit Yeung,  Marine Video Cloud: A Cloud-Based Video Analytics Platform for Collaborative Marine Research, OCEANS, 2023</p>
+<!--        <p> 2024    <b>Yingshu Chen</b>, Huajian Huang, Tuan-Anh Vu, Ka Chun Shum, Sai-Kit Yeung, StyleCity: Large-Scale 3D Urban Scenes Stylization with Vision-and-Text Reference via Progressive Optimization, Pre-print. </p>-->
+        <p> 2023    <b>Yingshu Chen</b>, Guocheng Shao, Ka Chun Shum, Binh-Son Hua, Sai-Kit Yeung, Advances in 3D Neural Stylization: A Survey, Pre-print. </p>
+        <p> 10/2023  Huajian Huang, Yinzhe Xu, <b>Yingshu Chen</b> and Sai-Kit Yeung, 360VOT: A New Benchmark Dataset for Omnidirectional Visual Object Tracking, International Conference on Computer Vision (ICCV), 2023.</p>
+        <p> 10/2023  Ziqiang Zheng, <b>Yingshu Chen</b>, Binh-Son Hua and Sai-Kit Yeung, CompUDA: Compositional Unsupervised Domain Adaptation for Semantic Segmentation under Adverse Conditions, IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2023.</p>
+        <p> 10/2023  Ziqiang Zheng, <b>Yingshu Chen</b>, Binh-Son Hua, Yang Wu and Sai-Kit Yeung, Cross-Domain Autonomous Driving Perception using Contrastive Appearance Adaptation, IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2023.</p>
+        <p> 06/2023  Tan-Sang Ha*, Ziqiang Zheng*, <b>Yingshu Chen</b>, Haixin Liang, Apple Pui-Yi Chui, Yue-Him Wong and Sai-Kit Yeung,  Marine Video Cloud: A Cloud-Based Video Analytics Platform for Collaborative Marine Research, OCEANS, 2023.</p>
         <p> 10/2022  Hong Wing Pang, <b>Yingshu Chen</b>, Phuoc-Hieu T. Le, Binh-Son Hua, Thanh Nguyen and  Sai-Kit Yeung, Neural Scene Decoration from a Single Photograph, European Conference on Computer Vision (ECCV), 2022. </p>
         <p> 08/2022  <b>Yingshu Chen</b>, Tuan-Anh Vu, Ka-Chun Shum, Binh-Son Hua and Sai-Kit Yeung, Time-of-Day Neural Style Transfer for Architectural Photographs, The IEEE International Conference on Computational Photography (ICCP), 2022.</p>
-        <p> 03/2018  Ting Li, Liwen Feng, <b>Yingshu Chen</b> and Huagen Wan, An Approach to Free-Hand Interaction For 3D Scene Modeling, Transactions of Beijing Institute of Technology</p>
-        <p> 07/2017  Ting Li, Liwen Feng, <b>Yingshu Chen</b> and Huagen Wan, An Approach to Free-Hand Interaction For 3D Scene Modeling, the 13th China Human Computer Interaction Conference, 2017</p>
-        <p> 11/2015  Hu Beixin, <b>Yingshu Chen</b> and Yangye Wang, A Virtual Five String Piano on Fingers, 2015 Asian Conference on Design and Digital Engineering – No.64, Nov. 4th - 6th,2015, KICC, Kitakyushu, Fukuoka, Japan</p>
+        <p> 03/2018  Ting Li, Liwen Feng, <b>Yingshu Chen</b> and Huagen Wan, An Approach to Free-Hand Interaction For 3D Scene Modeling, Transactions of Beijing Institute of Technology, 2018.</p>
+        <p> 07/2017  Ting Li, Liwen Feng, <b>Yingshu Chen</b> and Huagen Wan, An Approach to Free-Hand Interaction For 3D Scene Modeling, the 13th China Human Computer Interaction Conference, 2017.</p>
+        <p> 11/2015  Hu Beixin, <b>Yingshu Chen</b> and Yangye Wang, A Virtual Five String Piano on Fingers, 2015 Asian Conference on Design and Digital Engineering – No.64, Nov. 4th - 6th,2015, KICC, Kitakyushu, Fukuoka, Japan.</p>
     </div>
 
     <div class="sub-container">
-        <h1>TEACHING SERVICES</h1>
+        <h1>SERVICES</h1>
+
+        <h2>Teaching Assistance</h2>
         <!-- <p>, Teaching Assistance of ,  HKUST</p> -->
         <p>Spring 2023, Teaching Assistance of COMP 4021 Internet Computing, HKUST</p>
         <p>Fall 2022, Teaching Assistance of Computer Vision and Computer Graphics Workshop, Scientist-in-Residence Program, HKMU</p>
-        <p>Spring 2022 & Fall 2022, Teaching Assistance of CSIT 6000L Advanced Digital Design, HKUST</p>
-        <p>Spring 2022, Teaching Assistance of ISDN 5300 Advanced Digital Design, HKUST</p>
+        <p>Spring 2022 & Fall 2022 & Fall 2023, Teaching Assistance of CSIT 6000L Advanced Digital Design, HKUST</p>
+        <p>Spring 2022 & Fall 2023, Teaching Assistance of ISDN 5300 Advanced Digital Design, HKUST</p>
         <p>Fall 2021, Teaching Assistance of ISDN6660A Integrative Systems and Design Seminar, HKUST</p>
         <p>Fall 2021, Teaching Assistance of COMP 4421 Image Processing,  HKUST</p>
         <p>Fall 2020, Teaching Assistance of COMP 1022P Introduction to Computing with Java,  HKUST</p>
         <p>Spring 2020, Teaching Assistance of COMP 3311 Database Management Systems,  HKUST</p>
         <p>Fall 2019 & Fall 2020, Teaching Assistance of ISDN 2300 Digital Design, HKUST</p>
+
+        <h2>Review Service</h2>
+        <p>Reviewer for CVPR 2024, ACCV 2022 </p>
     </div>
 
 
