update font style

--- a/cv_cys.html
+++ b/cv_cys.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
     <title>Yingshu CHEN (Susan) | CHEN, Yingshu</title>
     <meta charset="utf-8"/>
@@ -17,7 +17,7 @@
 
     <div class="sub-container">
         <h1>BASIC INFORMATION</h1>
-        <h3>NAME: Yingshu CHEN (Susan) 陳穎舒</h3>
+        <h3>NAME: Yingshu CHEN (Susan) <span lang="cn">陳穎舒</span></h3>
         <h3>E-MAIL：yingshu2008[AT]gmail[DOT]com </h3>
         <h3>PERSONAL WEBSITE：
 <!--             <a href="http://yschen.site">yschen.site</a> -->
@@ -30,12 +30,14 @@
 
     <div class="sub-container">
         <h1>EDUCATION BACKGROUND</h1>
-        <p><strong>Bachelor of Engineering in Digital Media Technology, <br>Zhejiang University, Sept 2012 – June 2016</strong></p>
+        <p>PhD in Computer Science and Engineering, <br>The Hong Kong University of Science and Technology, Aug 2019 – Now</p>
+        <p>Master of Science in Computer Science, <br>The University of Hong Kong, Sept 2016 – Jan 2018</p>
+        <!--				<p>MAIN COURSES: Multimedia Technologies, Smart phone apps development, Visualization and visual analytics, Data mining, Cluster and cloud computing, User interface design and development</p>-->
+
+        <p>Bachelor of Engineering in Digital Media Technology, <br>Zhejiang University, Sept 2012 – June 2016</p>
         <!--				<p>MAIN COURSES: Image Analysis & Artistic Process, Fundaments of Media Signal Processing, Computer Graphics, Fundamentals of Data Structures, Computer Vision, Digital Audio and Video Processing, Data Visualization and Cross-media, Artificial Intelligence, Human-computer Interaction, Animation Design, Computer Game Programming, Virtual Reality and Digital Entertainment, Drawing of Cartoon and Animation, Drama and Script Writing</p>-->
 
-        <p><strong>Master of Science in Computer Science, <br>The University of Hong Kong, Sept 2016 – Jan 2018</strong></p>
-        <!--				<p>MAIN COURSES: Multimedia Technologies, Smart phone apps development, Visualization and visual analytics, Data mining, Cluster and cloud computing, User interface design and development</p>-->
-        <p><strong>PhD in Computer Science and Engineering, <br>The Hong Kong University of Science and Technology, Aug 2019 – Now</strong></p>
+
     </div>
 
     <div class="sub-container">
@@ -124,9 +126,9 @@
         <p>Cantonese, Mandarin, English</p>
 
         <p><strong>Computer</strong></p>
-        <p> Python | MATLAB |  C# | Java |  | C/C++ -- National Computer Rank Examination - Level 2 Excellent（C language）|
-            Qt | Photoshop | Maya | Blender | Unity | Unreal, etc. </p>
-        <p></p>Web programming: HTML，CSS，JavaScript, TypeScript |Android app development</p>
+        <p> Python | Pytorch | Blender | C/C++ -- National Computer Rank Examination - Level 2 Excellent (C language)| MATLAB |  C# | Java |
+            Qt | Photoshop | Maya | Unity | Unreal, etc. </p>
+        <p></p>Web programming: HTML，CSS，JavaScript, TypeScript, Angular |Android app development</p>
 
         <p><strong>Other Skills</strong></p>
         <p>Free-hand sketch ability | Photographing and photographic editing ability</p>
