--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<p><a class="link-style none-decoration" href="mailto:yingshu2008@gmail.com"><b>E-MAIL</b></a>: yingshu2008[AT]gmail[DOT]com  | <a class="link-style none-decoration" href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank"><b>LINKEDIN</b></a> </p>
 				<h5 class="info-text">Yingshu CHEN is currently a PhD candidate in the Department of Computer Science and Engineering, the Hong Kong University of Science and Technology (HKUST) supervised by Sai-Kit Yeung and Ajay Joneja.
 					Her research interests cover computer vision and computer graphics for computational design such as 2D and 3D style transfer.
-					Yingshu received her B.Eng in Digital Media Technology from Zhejiang University in 2016 and M.Sc in Computer Science from The University of Hong Kong in 2018.</h5>
+					Yingshu received her B.Eng in Digital Media Technology from Zhejiang University and M.Sc in Computer Science from The University of Hong Kong.</h5>
 			</div>
 		</header>
 		<hr class="fancy-hr">
